--- a/index.html
+++ b/index.html
@@ -109,9 +109,7 @@ body {
 <body>
 
  <div class="container">
-        <h1 class="title">We Are Coming Soon</h1>
-        <button class="btn">Subscribe</button>
-        <div class="credit">Made with <span style="color:tomato">❤</span> by <a  href="https://www.learningrobo.com/">Learning Robo</a></div>
+        <h1 class="title">Work In Progress</h1>
       </div>
 
 </body>
