Update font weight and size in index.html

--- a/index.html
+++ b/index.html
@@ -58,9 +58,9 @@ body {
   padding: 1rem;
   text-align: center;
   text-transform: uppercase;
-  font-weight: 900;
+  font-weight: 700;
   font-style: italic;
-  font-size: 3rem;
+  font-size: 2rem;
   color: #7f7fd5;
   line-height: 0.8;
   background-image: var(--gradient);
@@ -109,7 +109,8 @@ body {
 <body>
 
  <div class="container">
-        <h1 class="title">Work In Progress</h1>
+        <h2 class="title">Still in Development</h2>
+        <h2 style="color: #7f7fd5;font-size: 2rem; margin: 0; padding: 0;">☹ ☹</h2>
       </div>
 
 </body>
