Update link to Github in index.html

--- a/index.html
+++ b/index.html
@@ -110,7 +110,7 @@ body {
 
  <div class="container">
         <h2 class="title">Still in Development</h2>
-        <h2 style="color: #7f7fd5;font-size: 2rem; margin: 0; padding: 0;">☹ ☹</h2>
+        <a href="https://github.com/aais1" class="btn">Github</a>
       </div>
 
 </body>
